# py_fem

./: .gitignore  README.md  pyproject.toml
scripts/: poisson_equation.py
src/py_fem/core/: __init__.py  assemble.py  boundary_conditions.py  mesh.py
src/py_fem/utilities/: __init__.py  error_norm.py  plot.py  solvers.py
tests/: mesh.msh
