[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_fem"
version = "0.1.0"
description = "Descrizione breve del progetto"
authors = [
    { name="Mario Rossi", email="mario.rossi@email.it" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.3.5",
    "matplotlib>=3.10.8"
    "scipy>=1.16.3"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

